--- a/src/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
+++ b/src/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -11,6 +11,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="LayoutComponent\" />
+    <Folder Include="FeedbackComponent\" />
+    <Folder Include="BasicComponent\" />
+    <Folder Include="NavigationComponent\" />
+    <Folder Include="DataDisplayComponent\" />
   </ItemGroup>
 
 </Project>
