--- a/src/H.LowCode.WasmClient/H.LowCode.WasmClient.csproj
+++ b/src/H.LowCode.WasmClient/H.LowCode.WasmClient.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -12,14 +12,17 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.9" PrivateAssets="all" />
-    <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+    <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\H.LowCode.RenderEngine.AntBlazor\H.LowCode.RenderEngine.AntBlazor.csproj" />
     <ProjectReference Include="..\H.LowCode.RenderEngine.Html\H.LowCode.RenderEngine.Html.csproj" />
     <ProjectReference Include="..\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
+    <ProjectReference Include="..\H.LowCode.Theme.AntBlazorPro\H.LowCode.Theme.AntBlazorPro.csproj" />
+    <ProjectReference Include="..\H.LowCode.Theme.Html\H.LowCode.Theme.Html.csproj" />
+    <ProjectReference Include="..\H.LowCode.Theme\H.LowCode.Theme.csproj" />
   </ItemGroup>
 
   <ItemGroup>
