--- a/src/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
+++ b/src/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="AntDesign" Version="0.9.2" />
 	<PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.9" />
 	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.9" />
 	<PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
@@ -15,9 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="LayoutComponent\" />
     <Folder Include="FeedbackComponent\" />
-    <Folder Include="BasicComponent\" />
     <Folder Include="NavigationComponent\" />
     <Folder Include="DataDisplayComponent\" />
   </ItemGroup>
