--- a/src/H.LowCode.Render.WebApi/H.LowCode.Render.WebApi.csproj
+++ b/src/H.LowCode.Render.WebApi/H.LowCode.Render.WebApi.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\H.LowCode.Render.Model\H.LowCode.Render.Model.csproj" />
+  </ItemGroup>
+
 </Project>
