--- a/src/H.LowCode.Theme.AntBlazorPro/H.LowCode.Theme.AntBlazorPro.csproj
+++ b/src/H.LowCode.Theme.AntBlazorPro/H.LowCode.Theme.AntBlazorPro.csproj
@@ -4,10 +4,6 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Content Remove="Pages\Index.razor" />
-  </ItemGroup>
-
   
   <ItemGroup>
     <SupportedPlatform Include="browser" />
@@ -22,10 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Pages\Index.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\H.LowCode.Render.Model\H.LowCode.Render.Model.csproj" />
     <ProjectReference Include="..\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
   </ItemGroup>
 
