--- a/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine.csproj
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine.csproj
@@ -18,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
-    <Folder Include="Render\" />
+    <ProjectReference Include="..\H.LowCode.BlazorExtensions\H.LowCode.BlazorExtensions.csproj" />
+    <ProjectReference Include="..\H.LowCode.Utility\H.LowCode.Utility.csproj" />
   </ItemGroup>
 
 </Project>
