--- a/src/H.LowCode.Designer.Admin/H.LowCode.Designer.Admin.csproj
+++ b/src/H.LowCode.Designer.Admin/H.LowCode.Designer.Admin.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,11 +9,11 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.9" />
-	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.9" />
-	<PackageReference Include="AntDesign.ProLayout" Version="0.1.6" />
+	<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.1" />
+	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.1" />
+	<PackageReference Include="AntDesign.ProLayout" Version="0.1.10" />
 	<PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
-	<PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+	<PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
