重命名项目

--- a/src/H.LowCode.Render.HttpApi/H.LowCode.Render.HttpApi.csproj
+++ b/src/H.LowCode.Render.HttpApi/H.LowCode.Render.HttpApi.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\H.LowCode.Render.Model\H.LowCode.Render.Model.csproj" />
+    <ProjectReference Include="..\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
   </ItemGroup>
 
 </Project>
