--- a/src/H.LowCode.Theme.AntBlazorPro/H.LowCode.Theme.AntBlazorPro.csproj
+++ b/src/H.LowCode.Theme.AntBlazorPro/H.LowCode.Theme.AntBlazorPro.csproj
@@ -3,7 +3,6 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
-
   
   <ItemGroup>
     <SupportedPlatform Include="browser" />
@@ -18,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\H.LowCode.Render.Model\H.LowCode.Render.Model.csproj" />
+    <ProjectReference Include="..\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
     <ProjectReference Include="..\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
   </ItemGroup>
 
