调整目录结构

--- a/src/H.LowCode.DesignerEngine/H.LowCode.Designer.HttpApi/H.LowCode.Designer.HttpApi.csproj
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.Designer.HttpApi/H.LowCode.Designer.HttpApi.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
+  </ItemGroup>
+
 </Project>
