--- a/src/H.LowCode.Common/H.LowCode.Metadata/H.LowCode.Metadata.csproj
+++ b/src/H.LowCode.Common/H.LowCode.Metadata/H.LowCode.Metadata.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\H.LowCode.JsonSchemaExtensions\H.LowCode.JsonSchemaExtensions.csproj" />
+	</ItemGroup>
+	
 </Project>
