--- a/src/H.LowCode.DesignerEngine/H.LowCode.Designer.WasmHost/H.LowCode.Designer.WasmHost.csproj
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.Designer.WasmHost/H.LowCode.Designer.WasmHost.csproj
@@ -1,23 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.2" PrivateAssets="all" />
-    <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\H.LowCode.Designer.Admin\H.LowCode.Designer.Admin.csproj" />
-    <ProjectReference Include="..\H.LowCode.DesignerEngine\H.LowCode.DesignerEngine.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+    <ProjectReference Include="..\..\H.LowCode.DesignerEngine\H.LowCode.Designer.Admin\H.LowCode.Designer.Admin.csproj" />
+    <ProjectReference Include="..\..\H.LowCode.DesignerEngine\H.LowCode.DesignerEngine\H.LowCode.DesignerEngine.csproj" />
   </ItemGroup>
 
 </Project>
