--- a/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine.csproj
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine.csproj
@@ -19,6 +19,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.BlazorExtensions\H.LowCode.BlazorExtensions.csproj" />
+    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.JsonSchemaExtensions\H.LowCode.JsonSchemaExtensions.csproj" />
+    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
   </ItemGroup>
 
 </Project>
