将项目类型改为 Blazor WebAssembly Hosted

--- a/src/H.LowCode.DesignerEngine/H.LowCode.Designer.HttpApi/H.LowCode.Designer.HttpApi.csproj
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.Designer.HttpApi/H.LowCode.Designer.HttpApi.csproj
@@ -12,9 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.JsonSchemaExtensions\H.LowCode.JsonSchemaExtensions.csproj" />
+    <ProjectReference Include="..\..\H.Extensions\H.Extensions.Json\H.Extensions.Json.csproj" />
     <ProjectReference Include="..\H.LowCode.Designer.WasmHost\H.LowCode.Designer.WasmHost.csproj" />
   </ItemGroup>
-
 
 </Project>
