--- a/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine.csproj
+++ b/src/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine/H.LowCode.DesignerEngine.csproj
@@ -18,9 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.BlazorExtensions\H.LowCode.BlazorExtensions.csproj" />
-    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.JsonSchemaExtensions\H.LowCode.JsonSchemaExtensions.csproj" />
-    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
+    <ProjectReference Include="..\..\H.LowCode.Utility\H.LowCode.Blazor.Utility\H.LowCode.Blazor.Utility.csproj" />
+    <ProjectReference Include="..\..\H.LowCode.Utility\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
   </ItemGroup>
 
 </Project>
