--- a/src/H.LowCode.RenderEngine/H.LowCode.Render.WasmHost/Properties/launchSettings.json
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Render.WasmHost/Properties/launchSettings.json
@@ -3,25 +3,25 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:26887",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:28667",
+      "sslPort": 44388
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
+    "H.LowCode.Render.WasmHost": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+      "applicationUrl": "https://localhost:5103;http://localhost:5003",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "H.LowCode.Render.WasmHost": {
-      "commandName": "Project",
-      "dotnetRunMessages": "true",
+    "IIS Express": {
+      "commandName": "IISExpress",
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
