--- a/src/H.LowCode.RenderEngine/H.LowCode.Theme.AntBlazorPro/H.LowCode.Theme.AntBlazorPro.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Theme.AntBlazorPro/H.LowCode.Theme.AntBlazorPro.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
+    <ProjectReference Include="..\..\H.LowCode.Utility\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
     <ProjectReference Include="..\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
   </ItemGroup>
 
