--- a/src/H.LowCode.Utility/H.LowCode.Metadata/H.LowCode.Metadata.csproj
+++ b/src/H.LowCode.Utility/H.LowCode.Metadata/H.LowCode.Metadata.csproj
@@ -9,7 +9,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\H.LowCode.JsonSchemaExtensions\H.LowCode.JsonSchemaExtensions.csproj" />
+	  <ProjectReference Include="..\..\H.Extensions\H.Extensions.Json\H.Extensions.Json.csproj" />
 	</ItemGroup>
 	
 </Project>
