--- a/src/H.LowCode.WorkflowDesigner/H.LowCode.WorkflowEngine.HttpApi/Properties/launchSettings.json
+++ b/src/H.LowCode.WorkflowDesigner/H.LowCode.WorkflowEngine.HttpApi/Properties/launchSettings.json
@@ -4,16 +4,16 @@
       "anonymousAuthentication": true,
       "iisExpress": {
         "applicationUrl": "http://localhost:59347",
-        "sslPort": 44389
+        "sslPort": 44364
       }
     },
     "profiles": {
-      "H.LowCode.Designer.HttpApi": {
+      "H.LowCode.WorkflowEngine.HttpApi": {
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-        "applicationUrl": "https://localhost:5102;http://localhost:5002",
+        "applicationUrl": "https://localhost:5105;http://localhost:5005",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
