--- a/src/H.LowCode.WorkflowDesigner/H.LowCode.WorkflowDesigner.WasmHost/Properties/launchSettings.json
+++ b/src/H.LowCode.WorkflowDesigner/H.LowCode.WorkflowDesigner.WasmHost/Properties/launchSettings.json
@@ -3,25 +3,28 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56082/",
+      "applicationUrl": "http://localhost:59347",
       "sslPort": 44364
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
+    "H.LowCode.WorkflowDesigner.WasmHost": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
+      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+      "applicationUrl": "https://localhost:5105;http://localhost:5005",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "H.LowCode.WorkflowDesigner.WasmHost": {
-      "commandName": "Project",
+    "IIS Express": {
+      "commandName": "IISExpress",
       "launchBrowser": true,
+      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:7001;http://localhost:7000"
+      }
     }
   }
 }
