--- a/src/H.LowCode.WorkflowDesigner/H.LowCode.WorkflowEngine.HttpApi/H.LowCode.WorkflowEngine.HttpApi.csproj
+++ b/src/H.LowCode.WorkflowDesigner/H.LowCode.WorkflowEngine.HttpApi/H.LowCode.WorkflowEngine.HttpApi.csproj
@@ -1,7 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.2" />
+	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\H.LowCode.WorkflowDesigner.WasmHost\H.LowCode.WorkflowDesigner.WasmHost.csproj" />
+    <ProjectReference Include="..\H.LowCode.WorkflowDesigner\H.LowCode.WorkflowDesigner.csproj" />
+  </ItemGroup>
 
 </Project>
