项目重命名

--- a/src/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.HttpApi/H.LowCode.WorkflowEngine.HttpApi.csproj
+++ b/src/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.HttpApi/H.LowCode.WorkflowEngine.HttpApi.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\H.LowCode.WorkflowDesigner.WasmHost\H.LowCode.WorkflowDesigner.WasmHost.csproj" />
+    <ProjectReference Include="..\H.LowCode.WorkflowEngine.WasmHost\H.LowCode.WorkflowEngine.WasmHost.csproj" />
     <ProjectReference Include="..\H.LowCode.WorkflowDesigner\H.LowCode.WorkflowDesigner.csproj" />
   </ItemGroup>
 
