--- a/src/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.WasmHost/Properties/launchSettings.json
+++ b/src/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.WasmHost/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "H.LowCode.WorkflowDesigner.WasmHost": {
+    "H.LowCode.WorkflowEngine.WasmHost": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
