--- a/src/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.WasmHost/wwwroot/manifest.json
+++ b/src/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.WasmHost/wwwroot/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "H.LowCode.WorkflowDesigner.WasmHost",
-  "short_name": "H.LowCode.WorkflowDesigner.WasmHost",
+  "name": "H.LowCode.WorkflowEngine.WasmHost",
+  "short_name": "H.LowCode.WorkflowEngine.WasmHost",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
