将组件拆分为独立项目

--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
@@ -19,7 +19,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\H.LowCode.Utility\H.LowCode.Blazor.Utility\H.LowCode.Blazor.Utility.csproj" />
+    <ProjectReference Include="..\..\H.LowCode.Utility\H.LowCode.Metadata.Components\H.LowCode.Metadata.Components.csproj" />
     <ProjectReference Include="..\..\H.LowCode.Utility\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
+    <ProjectReference Include="..\H.LowCode.DesignEngine.Components.Custom\H.LowCode.DesignEngine.Components.Custom.csproj" />
+    <ProjectReference Include="..\H.LowCode.DesignEngine.Components\H.LowCode.DesignEngine.Components.csproj" />
   </ItemGroup>
 
 </Project>
