--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components.Custom/H.LowCode.DesignEngine.Components.Custom.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components.Custom/H.LowCode.DesignEngine.Components.Custom.csproj
@@ -12,7 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+	<PackageReference Include="AntDesign" Version="0.10.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.2" />
   </ItemGroup>
 
   <ItemGroup>
