添加DDD相关项目

--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Application/H.LowCode.Designer.Application.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Application/H.LowCode.Designer.Application.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.Ddd\H.Ddd.HttpApi\H.Ddd.HttpApi.csproj" />
-    <ProjectReference Include="..\..\H.Extensions\H.Extensions.Json\H.Extensions.Json.csproj" />
+    <ProjectReference Include="..\..\H.Ddd\H.Ddd.Application\H.Ddd.Application.csproj" />
     <ProjectReference Include="..\H.LowCode.Designer.Application.Abstraction\H.LowCode.Designer.Application.Abstraction.csproj" />
   </ItemGroup>
 
