H.LowCode.Designer ddd

--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Application/H.LowCode.Designer.Application.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Application/H.LowCode.Designer.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\H.Ddd\H.Ddd.Application\H.Ddd.Application.csproj" />
     <ProjectReference Include="..\H.LowCode.Designer.Application.Abstraction\H.LowCode.Designer.Application.Abstraction.csproj" />
+    <ProjectReference Include="..\H.LowCode.Designer.Domain.Abstraction\H.LowCode.Designer.Domain.Abstraction.csproj" />
   </ItemGroup>
 
 </Project>
