--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Domain/H.LowCode.Designer.Domain.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Domain/H.LowCode.Designer.Domain.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\H.Ddd\H.Ddd.Domain\H.Ddd.Domain.csproj" />
+    <ProjectReference Include="..\H.LowCode.Designer.Domain.Abstraction\H.LowCode.Designer.Domain.Abstraction.csproj" />
+    <ProjectReference Include="..\H.LowCode.Designer.Repository.Abstraction\H.LowCode.Designer.Repository.Abstraction.csproj" />
   </ItemGroup>
 
 </Project>
