--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Host/H.LowCode.Designer.Host.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Host/H.LowCode.Designer.Host.csproj
@@ -11,7 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\H.LowCode.Designer.Application\H.LowCode.Designer.Application.csproj" />
+    <ProjectReference Include="..\H.LowCode.Designer.Domain\H.LowCode.Designer.Domain.csproj" />
     <ProjectReference Include="..\H.LowCode.Designer.HttpApi\H.LowCode.Designer.HttpApi.csproj" />
+    <ProjectReference Include="..\H.LowCode.Designer.Repository.JsonFile\H.LowCode.Designer.Repository.JsonFile.csproj" />
+    <ProjectReference Include="..\H.LowCode.Designer.Repository.MongoDB\H.LowCode.Designer.Repository.MongoDB.csproj" />
     <ProjectReference Include="..\H.LowCode.Designer.WasmHost\H.LowCode.Designer.WasmHost.csproj" />
   </ItemGroup>
 
