--- a/src/H.Ddd/H.Ddd.Domain/H.Ddd.Domain.csproj
+++ b/src/H.Ddd/H.Ddd.Domain/H.Ddd.Domain.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
+	<Import Project="..\Abp.props" />
+
+	<PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
