--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Application.Abstraction/H.LowCode.Designer.Application.Abstraction.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Application.Abstraction/H.LowCode.Designer.Application.Abstraction.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\H.Ddd\H.Ddd.Application.Abstraction\H.Ddd.Application.Abstraction.csproj" />
+    <ProjectReference Include="..\..\H.Extensions\H.Extensions.Json\H.Extensions.Json.csproj" />
   </ItemGroup>
 
 </Project>
