--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.HttpApi/H.LowCode.Designer.HttpApi.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.HttpApi/H.LowCode.Designer.HttpApi.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Volo.Abp.Core" Version="5.2.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\H.Ddd\H.Ddd.HttpApi\H.Ddd.HttpApi.csproj" />
