--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.MongoDB/H.LowCode.Designer.Repository.MongoDB.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.MongoDB/H.LowCode.Designer.Repository.MongoDB.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\H.Ddd\H.Ddd.Repository\H.Ddd.Repository.csproj" />
+    <ProjectReference Include="..\H.LowCode.Designer.Repository.Abstraction\H.LowCode.Designer.Repository.Abstraction.csproj" />
+  </ItemGroup>
+
 </Project>
