表单设计器属性面板样式联动

--- a/src/H.Extensions/H.Extensions.System/H.Extensions.System.csproj
+++ b/src/H.Extensions/H.Extensions.System/H.Extensions.System.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="IO\" />
+    <Folder Include="Reflection\" />
+    <Folder Include="Text\" />
+  </ItemGroup>
+
 </Project>
