--- a/src/H.LowCode.Utility/H.LowCode.Metadata.Components/H.LowCode.Metadata.Components.csproj
+++ b/src/H.LowCode.Utility/H.LowCode.Metadata.Components/H.LowCode.Metadata.Components.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\H.Extensions\H.Extensions.System\H.Extensions.System.csproj" />
+  </ItemGroup>
+
 </Project>
