--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Application/H.LowCode.Designer.Application.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Application/H.LowCode.Designer.Application.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\..\H.Ddd\H.Ddd.Application\H.Ddd.Application.csproj" />
     <ProjectReference Include="..\H.LowCode.Designer.Application.Abstraction\H.LowCode.Designer.Application.Abstraction.csproj" />
     <ProjectReference Include="..\H.LowCode.Designer.Domain.Abstraction\H.LowCode.Designer.Domain.Abstraction.csproj" />
+    <ProjectReference Include="..\H.LowCode.Designer.Domain\H.LowCode.Designer.Domain.csproj" />
   </ItemGroup>
 
 </Project>
