--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Domain/H.LowCode.Designer.Domain.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Domain/H.LowCode.Designer.Domain.csproj
@@ -10,6 +10,8 @@
     <ProjectReference Include="..\..\H.Ddd\H.Ddd.Domain\H.Ddd.Domain.csproj" />
     <ProjectReference Include="..\H.LowCode.Designer.Domain.Abstraction\H.LowCode.Designer.Domain.Abstraction.csproj" />
     <ProjectReference Include="..\H.LowCode.Designer.Repository.Abstraction\H.LowCode.Designer.Repository.Abstraction.csproj" />
+    <ProjectReference Include="..\H.LowCode.Designer.Repository.JsonFile\H.LowCode.Designer.Repository.JsonFile.csproj" />
+    <ProjectReference Include="..\H.LowCode.Designer.Repository.MongoDB\H.LowCode.Designer.Repository.MongoDB.csproj" />
   </ItemGroup>
 
 </Project>
