--- a/src/H.LowCode.RenderEngine/H.LowCode.Render.HttpApi/H.LowCode.Render.HttpApi.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Render.HttpApi/H.LowCode.Render.HttpApi.csproj
@@ -1,19 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.2" />
-	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Volo.Abp.Core" Version="5.2.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\H.Extensions\H.Extensions.Json\H.Extensions.Json.csproj" />
-    <ProjectReference Include="..\H.LowCode.Render.WasmHost\H.LowCode.Render.WasmHost.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\H.Ddd\H.Ddd.HttpApi\H.Ddd.HttpApi.csproj" />
+		<ProjectReference Include="..\..\H.Extensions\H.Extensions.Json\H.Extensions.Json.csproj" />
+		<ProjectReference Include="..\..\H.LowCode.Utility\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
+		<ProjectReference Include="..\H.LowCode.Render.Application\H.LowCode.Render.Application.csproj" />
+	</ItemGroup>
 
 </Project>
