调整代码结构

--- a/src/H.Components/H.LowCode.WorkflowEngine/H.LowCode.WorkflowDesigner/H.LowCode.WorkflowDesigner.csproj
+++ b/src/H.Components/H.LowCode.WorkflowEngine/H.LowCode.WorkflowDesigner/H.LowCode.WorkflowDesigner.csproj
@@ -1,8 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
+	<Import Project="..\..\..\global.props" />
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
