--- a/src/H.Components/H.Utils.CSharpScriptEngine/H.Utils.CSharpScriptEngine.csproj
+++ b/src/H.Components/H.Utils.CSharpScriptEngine/H.Utils.CSharpScriptEngine.csproj
@@ -1,10 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<Import Project="..\..\global.props" />
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.2.0" />
