--- a/src/H.LowCode.DesignEngine/Admin/H.LowCode.Designer.Admin/H.LowCode.Designer.Admin.csproj
+++ b/src/H.LowCode.DesignEngine/Admin/H.LowCode.Designer.Admin/H.LowCode.Designer.Admin.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
+	<Import Project="..\..\..\global.props" />
+	<Import Project="..\..\..\lowcode.props" />
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
@@ -12,7 +11,6 @@
 	<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.2" />
 	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.2" />
 	<PackageReference Include="AntDesign.ProLayout" Version="0.1.10" />
-	<PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
 	<PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
   </ItemGroup>
 
