--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Domain/H.LowCode.Designer.Domain.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Domain/H.LowCode.Designer.Domain.csproj
@@ -1,13 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<Import Project="..\..\global.props" />
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.Ddd\H.Ddd.Domain\H.Ddd.Domain.csproj" />
     <ProjectReference Include="..\H.LowCode.Designer.Domain.Abstraction\H.LowCode.Designer.Domain.Abstraction.csproj" />
     <ProjectReference Include="..\H.LowCode.Designer.Repository.Abstraction\H.LowCode.Designer.Repository.Abstraction.csproj" />
     <ProjectReference Include="..\H.LowCode.Designer.Repository.JsonFile\H.LowCode.Designer.Repository.JsonFile.csproj" />
