--- a/src/H.Components/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.WasmHost/H.LowCode.WorkflowEngine.WasmHost.csproj
+++ b/src/H.Components/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.WasmHost/H.LowCode.WorkflowEngine.WasmHost.csproj
@@ -1,10 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<Import Project="..\..\..\global.props" />
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.2" />
