--- a/src/H.Components/H.Utils.CSharpScriptEngine.Tests/H.Utils.CSharpScriptEngine.Tests.csproj
+++ b/src/H.Components/H.Utils.CSharpScriptEngine.Tests/H.Utils.CSharpScriptEngine.Tests.csproj
@@ -1,9 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+	<Import Project="..\..\global.props" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -21,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\H.Utils.CodeCompiler\H.Utils.CodeCompiler.csproj" />
+    <ProjectReference Include="..\H.Utils.CSharpScriptEngine\H.Utils.CSharpScriptEngine.csproj" />
   </ItemGroup>
 
 </Project>
