--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Host/H.LowCode.Designer.Host.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Host/H.LowCode.Designer.Host.csproj
@@ -1,10 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<Import Project="..\..\global.props" />
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.2" />
