--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.HttpApi/H.LowCode.Designer.HttpApi.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.HttpApi/H.LowCode.Designer.HttpApi.csproj
@@ -1,18 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<Import Project="..\..\global.props" />
 
   <ItemGroup>
+    <PackageReference Include="H.Ddd.HttpApi" Version="0.1.0" />
     <PackageReference Include="Volo.Abp.Core" Version="5.2.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.Ddd\H.Ddd.HttpApi\H.Ddd.HttpApi.csproj" />
-    <ProjectReference Include="..\..\H.Extensions\H.Extensions.Json\H.Extensions.Json.csproj" />
     <ProjectReference Include="..\H.LowCode.Designer.Application.Abstraction\H.LowCode.Designer.Application.Abstraction.csproj" />
     <ProjectReference Include="..\H.LowCode.Designer.Application\H.LowCode.Designer.Application.csproj" />
   </ItemGroup>
