--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.Abstraction/H.LowCode.Designer.Repository.Abstraction.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.Abstraction/H.LowCode.Designer.Repository.Abstraction.csproj
@@ -1,13 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\H.Extensions\H.Extensions.Json\H.Extensions.Json.csproj" />
-  </ItemGroup>
+	<Import Project="..\..\global.props" />
+	<Import Project="..\..\lowcode.props" />
 
 </Project>
