--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.JsonFile/H.LowCode.Designer.Repository.JsonFile.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.JsonFile/H.LowCode.Designer.Repository.JsonFile.csproj
@@ -1,14 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<Import Project="..\..\global.props" />
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.Ddd\H.Ddd.Repository\H.Ddd.Repository.csproj" />
-    <ProjectReference Include="..\..\H.Extensions\H.Extensions.Json\H.Extensions.Json.csproj" />
+    <PackageReference Include="H.Ddd.Repository" Version="0.1.0" />
+    <PackageReference Include="H.Extensions.Json" Version="0.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\H.LowCode.Designer.Repository.Abstraction\H.LowCode.Designer.Repository.Abstraction.csproj" />
   </ItemGroup>
 
