--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.MongoDB/H.LowCode.Designer.Repository.MongoDB.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.MongoDB/H.LowCode.Designer.Repository.MongoDB.csproj
@@ -1,13 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<Import Project="..\..\global.props" />
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.Ddd\H.Ddd.Repository\H.Ddd.Repository.csproj" />
+    <PackageReference Include="H.Ddd.Repository" Version="0.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\H.LowCode.Designer.Repository.Abstraction\H.LowCode.Designer.Repository.Abstraction.csproj" />
   </ItemGroup>
 
