--- a/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
@@ -1,14 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
+	<Import Project="..\..\global.props" />
+	<Import Project="..\..\lowcode.props" />
 
   <ItemGroup>
 	<PackageReference Include="AntDesign" Version="0.10.4" />
 	<PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.2" />
 	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.2" />
-	<PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
   </ItemGroup>
 
   <ItemGroup>
