--- a/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
@@ -1,12 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
+	<Import Project="..\..\global.props" />
+	<Import Project="..\..\lowcode.props" />
 
   <ItemGroup>
 	<PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.2" />
-	<PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
   </ItemGroup>
 
 </Project>
