--- a/src/H.LowCode.RenderEngine/H.LowCode.Theme.Html/H.LowCode.Theme.Html.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Theme.Html/H.LowCode.Theme.Html.csproj
@@ -1,9 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
-  
+	<Import Project="..\..\global.props" />
+	<Import Project="..\..\lowcode.props" />
+
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
@@ -11,7 +10,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.2" />
-	<PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
     <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
   </ItemGroup>
 
