--- a/src/H.LowCode.Common/H.LowCode.Metadata/H.LowCode.Metadata.csproj
+++ b/src/H.LowCode.Common/H.LowCode.Metadata/H.LowCode.Metadata.csproj
@@ -2,5 +2,8 @@
 
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\lowcode.props" />
+	<ItemGroup>
+	  <PackageReference Update="H.Extensions.Json" Version="0.1.2" />
+	</ItemGroup>
 
 </Project>
