--- a/src/H.LowCode.DesignEngine/Admin/H.LowCode.Designer.Admin/H.LowCode.Designer.Admin.csproj
+++ b/src/H.LowCode.DesignEngine/Admin/H.LowCode.Designer.Admin/H.LowCode.Designer.Admin.csproj
@@ -18,4 +18,8 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="H.Extensions.Json" Version="0.1.2" />
+  </ItemGroup>
+
 </Project>
