--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components.Custom/H.LowCode.DesignEngine.Components.Custom.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components.Custom/H.LowCode.DesignEngine.Components.Custom.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="H.Extensions.Json" Version="0.1.2" />
+  </ItemGroup>
+
 </Project>
