--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\..\H.LowCode.Utils\H.LowCode.Blazor.Utility\H.LowCode.Blazor.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="H.Extensions.Json" Version="0.1.2" />
+  </ItemGroup>
+
 </Project>
