--- a/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
@@ -19,4 +19,8 @@
     <Folder Include="DataDisplayComponent\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="H.Extensions.Json" Version="0.1.2" />
+  </ItemGroup>
+
 </Project>
