--- a/src/H.LowCode.Common/H.LowCode.Metadata.Components/H.LowCode.Metadata.Components.csproj
+++ b/src/H.LowCode.Common/H.LowCode.Metadata.Components/H.LowCode.Metadata.Components.csproj
@@ -8,8 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="H.Extensions.System" Version="0.1.0" />
+    <PackageReference Include="H.Extensions.System" Version="0.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="H.Extensions.Json" Version="0.1.2" />
   </ItemGroup>
 
 </Project>
