--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Application.Abstraction/H.LowCode.Designer.Application.Abstraction.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Application.Abstraction/H.LowCode.Designer.Application.Abstraction.csproj
@@ -2,5 +2,8 @@
 
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\lowcode.props" />
+	<ItemGroup>
+	  <PackageReference Update="H.Extensions.Json" Version="0.1.2" />
+	</ItemGroup>
 
 </Project>
