--- a/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
@@ -7,4 +7,8 @@
 	<PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="H.Extensions.Json" Version="0.1.2" />
+  </ItemGroup>
+
 </Project>
