--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components/H.LowCode.DesignEngine.Components.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components/H.LowCode.DesignEngine.Components.csproj
@@ -13,8 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata.Components\H.LowCode.Metadata.Components.csproj" />
-    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
+    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Schema\H.LowCode.Schema.csproj" />
   </ItemGroup>
 
 </Project>
