--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.JsonFile/H.LowCode.Designer.Repository.JsonFile.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.JsonFile/H.LowCode.Designer.Repository.JsonFile.csproj
@@ -4,7 +4,7 @@
 
   <ItemGroup>
     <PackageReference Include="H.Ddd.Repository" Version="0.1.2" />
-    <PackageReference Include="H.Extensions.Json" Version="0.1.2" />
+    <PackageReference Include="H.Extensions.System" Version="0.1.2" />
   </ItemGroup>
 
   <ItemGroup>
