--- a/src/H.LowCode.RenderEngine/H.LowCode.Theme.AntBlazorPro/H.LowCode.Theme.AntBlazorPro.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Theme.AntBlazorPro/H.LowCode.Theme.AntBlazorPro.csproj
@@ -15,12 +15,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
+    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Schema\H.LowCode.Schema.csproj" />
     <ProjectReference Include="..\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="H.Extensions.Json" Version="0.1.2" />
+    <PackageReference Update="H.Extensions.System" Version="0.1.2" />
   </ItemGroup>
 
 </Project>
