--- a/src/H.LowCode.Common/H.LowCode.Schema/H.LowCode.Schema.csproj
+++ b/src/H.LowCode.Common/H.LowCode.Schema/H.LowCode.Schema.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+	
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\lowcode.props" />
 	<ItemGroup>
-	  <PackageReference Update="H.Extensions.Json" Version="0.1.2" />
+		<PackageReference Include="H.Extensions.System" Version="0.1.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.10" />
 	</ItemGroup>
 
 </Project>
