--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components.Custom/H.LowCode.DesignEngine.Components.Custom.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components.Custom/H.LowCode.DesignEngine.Components.Custom.csproj
@@ -14,12 +14,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata.Components\H.LowCode.Metadata.Components.csproj" />
-    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
+    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Schema\H.LowCode.Schema.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="H.Extensions.Json" Version="0.1.2" />
+    <PackageReference Update="H.Extensions.System" Version="0.1.2" />
   </ItemGroup>
 
 </Project>
