--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
@@ -19,13 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata.Components\H.LowCode.Metadata.Components.csproj" />
-    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
+    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Schema\H.LowCode.Schema.csproj" />
     <ProjectReference Include="..\..\H.LowCode.Utils\H.LowCode.Blazor.Utility\H.LowCode.Blazor.Utility.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="H.Extensions.Json" Version="0.1.2" />
+    <PackageReference Update="H.Extensions.System" Version="0.1.2" />
   </ItemGroup>
 
 </Project>
