--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.Abstraction/H.LowCode.Designer.Repository.Abstraction.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.Abstraction/H.LowCode.Designer.Repository.Abstraction.csproj
@@ -3,7 +3,7 @@
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\lowcode.props" />
 	<ItemGroup>
-	  <PackageReference Update="H.Extensions.Json" Version="0.1.2" />
+	  <PackageReference Update="H.Extensions.System" Version="0.1.2" />
 	</ItemGroup>
 
 </Project>
