--- a/src/H.LowCode.RenderEngine/H.LowCode.Render.HttpApi/H.LowCode.Render.HttpApi.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Render.HttpApi/H.LowCode.Render.HttpApi.csproj
@@ -8,7 +8,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
+		<ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Schema\H.LowCode.Schema.csproj" />
 		<ProjectReference Include="..\H.LowCode.Render.Application\H.LowCode.Render.Application.csproj" />
 	</ItemGroup>
 
