--- a/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="H.Extensions.Json" Version="0.1.2" />
+    <PackageReference Update="H.Extensions.System" Version="0.1.2" />
   </ItemGroup>
 
 </Project>
