--- a/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
@@ -8,7 +8,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="H.Extensions.Json" Version="0.1.2" />
+    <PackageReference Update="H.Extensions.System" Version="0.1.2" />
   </ItemGroup>
 
 </Project>
