--- a/src/lowcode.props
+++ b/src/lowcode.props
@@ -1,5 +1,6 @@
 <Project>
 	<ItemGroup>
-		<PackageReference Include="H.Extensions.Json" Version="0.1.0" />
+		<PackageReference Include="H.Extensions.System" Version="0.1.2" />
+		<PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
 	</ItemGroup>
 </Project>
