--- a/src/H.LowCode.RenderEngine/H.LowCode.Render.HttpApi/H.LowCode.Render.HttpApi.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Render.HttpApi/H.LowCode.Render.HttpApi.csproj
@@ -4,11 +4,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="H.Ddd.HttpApi" Version="0.1.2" />
-		<PackageReference Include="Volo.Abp.Core" Version="6.0.0" />
+		<PackageReference Include="Volo.Abp.Core" Version="7.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Schema\H.LowCode.Schema.csproj" />
+		<ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
 		<ProjectReference Include="..\H.LowCode.Render.Application\H.LowCode.Render.Application.csproj" />
 	</ItemGroup>
 
