--- a/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
@@ -4,11 +4,11 @@
 	<Import Project="..\..\lowcode.props" />
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.10" />
+	<PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Schema\H.LowCode.Schema.csproj" />
+    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
   </ItemGroup>
 
   <ItemGroup>
