--- a/src/H.LowCode.RenderEngine/Samples/H.LowCode.Render.Sample/H.LowCode.Render.Sample.csproj
+++ b/src/H.LowCode.RenderEngine/Samples/H.LowCode.Render.Sample/H.LowCode.Render.Sample.csproj
@@ -1,18 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<Import Project="..\..\..\global.props" />
 
-
-  <ItemGroup>
+	<ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
   </ItemGroup>
 
 </Project>
