--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components/H.LowCode.DesignEngine.Components.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components/H.LowCode.DesignEngine.Components.csproj
@@ -7,13 +7,13 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="AntDesign" Version="0.12.6" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.10" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.10" />
+	<PackageReference Include="AntDesign" Version="0.14.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Schema\H.LowCode.Schema.csproj" />
+    <ProjectReference Include="..\..\H.LowCode.Common\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
     <ProjectReference Include="..\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
   </ItemGroup>
 
