H.LowCode.WorkflowEngine.Host

--- a/src/H.Components/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.WasmHost/H.LowCode.WorkflowEngine.WasmHost.csproj
+++ b/src/H.Components/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.WasmHost/H.LowCode.WorkflowEngine.WasmHost.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
+	<PropertyGroup>
+	  <UserSecretsId>baaab3a8-7079-4786-91ce-abafbfbe6e56</UserSecretsId>
+	</PropertyGroup>
+
 	<Import Project="..\..\..\global.props" />
 
   <ItemGroup>
