--- a/src/H.Components/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.WasmHost/Properties/launchSettings.json
+++ b/src/H.Components/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.WasmHost/Properties/launchSettings.json
@@ -2,13 +2,13 @@
   "profiles": {
     "H.LowCode.WorkflowEngine.WasmHost": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://localhost:5105;http://localhost:5005",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+      "applicationUrl": "https://localhost:5105;http://localhost:5005"
     }
   }
 }
