优化拖拽效果

--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
@@ -1,6 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 	
 	<Import Project="..\..\global.props" />
+	
+	<ItemGroup>
+	  <None Remove="DesignPanel\DropItem.razor.css" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <Content Include="DesignPanel\DropItem.razor.css" />
+	</ItemGroup>
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
